llvm/test/tools/llvm-ifs/conflict-header-version.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/object.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# RUN: not llvm-ifs -action write-ifs -o - %s 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS2

# CHECK-IFS: error: Interface Stub: IfsVersion Mismatch.
# CHECK-IFS2: error: Interface Stub: Bad IfsVersion: 0.0, llvm-ifs supported version: 2.0.

--- !experimental-ifs-v2
IfsVersion:      0.0
Triple:          x86_64-unknown-linux-gnu
ObjectFileFormat: ELF
Symbols:
  - { Name: a, Type: Func }
...
